# radios-portuguesas

./: README.md  app.py  fetch_radio.py  pyproject.toml  radio.py  urls.py
flask_version/: app.py  fetch_radio.py  radio.py
flask_version/templates/: base.html  index.html  song.html
portugueseradios/: __init__.py  fetch_radio.py  radio.py  spotify.py
static/css/: style.css
templates/: base.html  footer.html  index.html  song.html
